tests/paczka1/fuzzy1/97280410.err
Error in line 1: A355 A830 28,4
Error in line 5: NQhpvsuYsNe A355 32,8
Error in line 11: hyS1 A830 22,3
Error in line 12: A355 A830 84,6
Error in line 18: zU5UuXZU8 A644 33,84
